--- a/index.html
+++ b/index.html
@@ -5,20 +5,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>为刘鹭打call(◕ˇ∀ˇ◕)</title>
 </head>
 <style>
     .flower {
-        margin-left: 32%;
-        margin-top: 9%;
+        margin-left: 36%;
+        margin-top: 2%;
     }
 </style>
 
-
 <body>
+    <h1 align="center">
+        <font color="#FF69B4">
+            <b>Flowers For Lu</b>
+        </font>
+    </h1>
     <p align="center">
-        <font size="6" color="red"><b>刘鹭宝宝,今天休息得怎么样啊?
-                <br>呐,送你一朵花花,愿天天开心!</br></b>
+        <font size="5">
+            🌼💐🎉🌷🎈🍭🍎🍒🌸☘️🌼💐🎉🌷🎈🍭🍎🍒🌸☘️🌼💐🎉🌷🎈🍭🍎🍒🌸☘️🌼💐🎉🌷🎈🍭🍎🍒🌸☘️<br>
+        </font>
+    </p>
+    <p align="center" style="font-size: 20px;">
+        欢迎光临本站la~la~lala~~lala~~
+    </p>
+
+    <div id="clock">
+        <p align="right" style="font-size: 20px;">
+            <b>当前时间:
+                <span id="date"></span>
+                <span id="time"></span>
+            </b>
+        </p>
+    </div>
+    <script>
+        // 获取时钟元素
+        var clock = document.getElementById('clock');
+
+        // 获取时间和日期元素
+        var time = document.getElementById('time');
+        var date = document.getElementById('date');
+
+        // 创建一个新的日期对象
+        var now = new Date();
+
+        // 更新时间和日期元素
+        time.innerHTML = now.toLocaleTimeString();
+        date.innerHTML = now.toLocaleDateString();
+
+        // 每隔一秒更新时间和日期
+        setInterval(function () {
+            now = new Date();
+            time.innerHTML = now.toLocaleTimeString();
+            date.innerHTML = now.toLocaleDateString();
+        }, 1000);
+    </script>
+    <p align="center">
+        <font size="6" color="#1E90FF">
+            <b>刘鹭宝宝,今天休息得怎么样啊?
+                <br>呐,送你一朵花花,祝天天开心(◕ˇ∀ˇ◕)<br>
+                <br>愿历经千山万水, 与温柔相逢
+                <br>--黄志平2025/08/20
+            </b>
         </font>
     </p>
     <canvas id="c" class="flower"></canvas>
@@ -34,8 +81,5 @@
     with (m = Math) C = cos, S = sin, P = pow, R = random; c.width = c.height = f = 600; h = -250; function p(a, b, c) { if (c > 60) return [S(a * 7) * (13 + 5 / (.2 + P(b * 4, 4))) - S(b) * 50, b * f + 50, 625 + C(a * 7) * (13 + 5 / (.2 + P(b * 4, 4))) + b * 400, a * 1 - b / 2, a]; A = a * 2 - 1; B = b * 2 - 1; if (A * A + B * B < 1) { if (c > 37) { n = (j = c & 1) ? 6 : 4; o = .5 / (a + .01) + C(b * 125) * 3 - a * 300; w = b * h; return [o * C(n) + w * S(n) + j * 610 - 390, o * S(n) - w * C(n) + 550 - j * 350, 1180 + C(B + A) * 99 - j * 300, .4 - a * .1 + P(1 - B * B, -h * 6) * .15 - a * b * .4 + C(a + b) / 5 + P(C((o * (a + 1) + (B > 0 ? w : -w)) / 25), 30) * .1 * (1 - B * B), o / 1e3 + .7 - o * w * 3e-6] } if (c > 32) { c = c * 1.16 - .15; o = a * 45 - 20; w = b * b * h; z = o * S(c) + w * C(c) + 620; return [o * C(c) - w * S(c), 28 + C(B * .5) * 99 - b * b * b * 60 - z / 2 - h, z, (b * b * .3 + P((1 - (A * A)), 7) * .15 + .3) * b, b * .7] } o = A * (2 - b) * (80 - c * 2); w = 99 - C(A) * 120 - C(b) * (-h - c * 4.9) + C(P(1 - b, 7)) * 50 + c * 2; z = o * S(c) + w * C(c) + 700; return [o * C(c) - w * S(c), B * 99 - C(P(b, 7)) * 50 - c / 3 - z / 1.35 + 450, z, (1 - b / 1.2) * .9 + a * .1, P((1 - b), 20) / 4 + .05] } } setInterval('for(i=0;i<1e4;i++)if(s=p(R(),R(),i%46/.74)){z=s[2];x=~~(s[0]*f/z-h);y=~~(s[1]*f/z-h);if(!m[q=y*f+x]|m[q]>z)m[q]=z,a.fillStyle="rgb("+~(s[3]*h)+","+~(s[4]*h)+","+~(s[3]*s[3]*-80)+")",a.fillRect(x,y,1,1)}', 0)
 </script>
 
-<!-- audio src="https://gitee.com/zhipinghuang/music/blob/master/fairytale.mp3" id="aud" autoplay="autoplay"
-    controls="controls" preload="auto" loop="loop"></audio> !-->
-<audio autoplay="autoplay" controls="controls" loop="loop" preload="auto" src="夕日-Bassy.mp3">
-
+<audio src="夕日-Bassy.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto">
 </audio>
