修改网页主题

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>
-		十二月Coisini </title>
+		为小鹿疯狂打call~(*๓´╰╯`๓) </title>
 	<link rel="icon" href="./static/img/favicon.ico">
 	<meta name="description" content="这是一个关于Lu的主页">
 	<meta name="keywords" content="Lu,小鹿的主页,Lu引导页,XiaoLu,LL">
