修改部分信息

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 					</li>
 					<li>
 						<div class="focus"></div>
-						<div>睡觉zzz~
+						<div>吃饭zzz~
 						</div>
-						<div>10:00</div>
+						<div>12:00</div>
 					</li>
 					<li>
 						<div class="focus"></div>
-						<div>睡觉zzz~
+						<div>打豆豆zzz~
 						</div>
 						<div>09:00</div>
 					</li>
@@ -107,14 +107,15 @@
 						src="./static/img/logokuang.png">
 				</div>
 				<div class="welcome">
-					Hello Welcome to <span class="gradientText">
+					Hello, Welcome to <br> <span class="gradientText">
 						Flowers For Lu </span>
 				</div>
-				<div class="description">👦 This is a website <span class="purpleText">For Lu~</span>
+				<div class="description">👦 This is a website about <span class="purpleText">Lu~~</span>
 				</div>
-				<div class="description">📝 小鹿是一个十分 <span class="purpleText textBackground">聪明可爱</span> 的 <span class="purpleText textBackground">女孩子.</span> 
+				<div class="description">📝 小鹿是一个十分 <span class="purpleText textBackground">聪明可爱</span> 的 <span
+						class="purpleText textBackground">女孩子.</span>
 				</div>
-				<div class="description">🍎 听说她做饭不错啊啊~~</span>
+				<div class="description">🍎 而且她做的饭看起来很不错啊~~</span>
 				</div>
 				<div class="iconContainer">
 					<a class="iconItem" onclick="" href="https://zph1224.leleosd.top">
@@ -184,7 +185,8 @@
 							d="M629.333333 202.666667v213.333333h277.333334v448h-512v-213.333333h-277.333334v-448h512z m213.333334 277.333333h-213.333334v170.666667h-170.666666v149.333333h384v-320z m-277.333334-213.333333h-384v320h213.333334v-170.666667h170.666666v-149.333333z m0 213.333333h-106.666666v106.666667h106.666666v-106.666667z"
 							p-id="1892"></path>
 					</svg>site </div>
-				<div class="projectList"><a class="projectItem a" target="_blank" href="https://www.yuque.com/shieryuecoisn/pp4wkp/fttwwsncof43bt6t?singleDoc# 《About Lu》">
+				<div class="projectList"><a class="projectItem a" target="_blank"
+						href="https://www.yuque.com/shieryuecoisn/pp4wkp/fttwwsncof43bt6t?singleDoc# 《About Lu》">
 						<div class="projectItemLeft">
 							<h1>记录</h1>
 							<p>关于小鹿的一些~~~</p>
@@ -306,6 +308,7 @@
 <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({ id: "KFqltKSkJgQTGD9l", ck: "KFqltKSkJgQTGD9l" })</script>
 
-<audio src="./static/music/SpiritedAway.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto"> </audio>
+<audio src="./static/music/SpiritedAway.mp3" autoplay="autoplay" controls="controls" loop="loop" preload="auto">
+</audio>
 
 </html>
