--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
 				</div>
 				<div class="description">🍎 而且她做的饭看起来很不错啊~~</span>
 				</div>
+				<div class="description"><span class="purpleText">生活明朗,万物可爱~</span>
+				</div>
 				<div class="iconContainer">
 					<a class="iconItem" onclick="" href="https://zph1224.leleosd.top">
 						<svg t="1704870335945" class="icon" viewBox="0 0 1024 1024" version="1.1"
